Revision history of Alt-Data-Frame-ButMore

0.0051      2019-06-01
    - Adjust some of Data::Frame::from_csv()'s behavior to align with R.
    - Fix PDL::Factor's repeat() method.
    - Fix Data::Frame's comparison on negative numerical values.
    - Data::Frame::string() now outputs "<BAD>" instead of a bare "BAD" for
      BAD values in non-numeric columns. 
    - Add explainations for Data::Frame::Examples's datasets.
    - Performance improvements: Data::Frame::from_csv(), and PDL::Factor
      and PDL::SV's new() constructors.
    - Removed Data::Rmap from dependencies.

0.0049      2019-05-05
    - Fix a severe memory leak.
    - Fix to_csv()'s datetime handling.

0.0047      2019-05-03
    - Improve eval_tidy() error message, and make it be context-aware.

0.0045      2019-04-21
    - Remove PDL::Stats::Basic and Data::Munge from dependencies.
    - Bump version requirements of some dependencies, trying to fix a
      failure on CPANTS. 
    - Speed-up some Data::Frame methods.

0.0043      2019-04-14
    - Breaking change: Dropped the number_of_rows() method for PDL and row
      names. It becomes redundant as we have a role to add length() method to
      PDL. The removal also helps reduce one dependency of the distributon.
    - PDL::SV: Fixed "uniq" method, added new override methods "set" and
      "sever". Also PDL::SV's doc is briefly written.
    - Add a "summary" method to Data::Frame.
    - Add "iris" example data set to Data::Frame::Examples.
    - Restructured main module doc.
    - Solved a circular use issue between Data::Frame and Data::Frame::Util.
    - Switched from Test::More/Test::Most/Test::Fatal/etc to Test2::V0 for
      testing.

0.0041      2019-03-10
    - Release as Alt-Data-Frame-ButMore by SLOYD.
    - Now it requires perl >= 5.16.
    - Reimplemented PDL::SV, PDL::Factor, PDL::Logical.
    - Add quite a number of methods into Data::Frame.
    - Include a Data::Frame::Examples module for example datasets.
